@@ -22,8 +22,8 @@ import com.lnf.company.exception.LnFEntityNotFoundException;
 import com.lnf.company.exception.LnFException;
 import com.lnf.company.model.Company;
 import com.lnf.company.model.Theme;
-import com.lnf.company.repository.ThemeRepository;
 import com.lnf.company.repository.CompanyRepository;
+import com.lnf.company.repository.ThemeRepository;
 import com.lnf.dto.company.ThemeDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -65,7 +65,7 @@ public class ThemeService {
 
     public void create(UUID companyId, List<ThemeDto> resource) {
         LnFBadRequestException.throwOnCondition(Objects::isNull, resource,
-                String.format("Failed to create theme for company [%s] with null payload", companyId));
+                "Failed to create theme for company [%s] with null payload".formatted(companyId));
         Company companyEntity = searchForCompany(companyId);
         List<Theme> entities = new ArrayList<>();
         resource.stream().filter(Objects::nonNull).forEach(gstDto -> {
@@ -79,7 +79,7 @@ public class ThemeService {
 
     public void create(UUID companyId, ThemeDto resource) {
         LnFBadRequestException.throwOnCondition(Objects::isNull, resource,
-                String.format("Failed to create theme for company [%s] with null payload", companyId));
+                "Failed to create theme for company [%s] with null payload".formatted(companyId));
         Company companyEntity = searchForCompany(companyId);
         Theme entity = ThemeConverter.toEntityModel(resource);
         entity.setCompany(companyEntity);
@@ -89,7 +89,7 @@ public class ThemeService {
 
     public void update(UUID companyId, UUID themeId, ThemeDto resource) {
         LnFBadRequestException.throwOnCondition(Objects::isNull, resource,
-                String.format("Failed to theme company[%s] with null payload", companyId));
+                "Failed to theme company[%s] with null payload".formatted(companyId));
         Company companyEntity = searchForCompany(companyId);
         searchForTheme(themeId);
         Theme updatedEntity = ThemeConverter.toEntityModel(resource);
@@ -105,7 +105,7 @@ public class ThemeService {
             repository.delete(entity);
             log.debug("Theme {} for company {} successfully deleted", themeId, companyId);
         } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to delete theme[%s] for company [%s]", themeId, companyId);
+            String errorMessage = "Failed to delete theme[%s] for company [%s]".formatted(themeId, companyId);
             throw new LnFException(errorMessage);
         }
     }
@@ -117,7 +117,7 @@ public class ThemeService {
             repository.deleteAll(entities);
             log.debug("Theme for company {} successfully deleted", companyId);
         } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to delete gsts for company [%s]", companyId);
+            String errorMessage = "Failed to delete gsts for company [%s]".formatted(companyId);
             throw new LnFException(errorMessage);
         }
     }
@@ -142,12 +142,12 @@ public class ThemeService {
 
     private Company searchForCompany(UUID companyId) {
         return companyRepository.findByCompanyId(companyId).
-                orElseThrow(() -> new LnFEntityNotFoundException(String.format("Company with id [%s] does not exist", companyId)));
+                orElseThrow(() -> new LnFEntityNotFoundException("Company with id [%s] does not exist".formatted(companyId)));
     }
 
     private Theme searchForTheme(UUID themeId) {
         return repository.findById(themeId).
-                orElseThrow(() -> new LnFEntityNotFoundException(String.format("Theme with id [%s] does not exist", themeId)));
+                orElseThrow(() -> new LnFEntityNotFoundException("Theme with id [%s] does not exist".formatted(themeId)));
     }
 
 }
