@@ -36,7 +36,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultMatcher;
 
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
@@ -53,7 +53,7 @@ import static org.springframework.http.MediaType.APPLICATION_JSON;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-class CompanyEventControllerTest extends BaseTestClass  {
+class CompanyEventControllerTest extends BaseTestClass {
 
     @Autowired
     private MockMvc mockMvc;
@@ -89,7 +89,7 @@ class CompanyEventControllerTest extends BaseTestClass  {
         assertEquals(ResponseEntity.ok(mockedPage), response);
 
         // Pagination with  sortBy and sortOrder
-        pageRequest = new PageRequestDto(0, 10,null,null);
+        pageRequest = new PageRequestDto(0, 10, null, null);
         response = paginationAndSortingHandler.handleFindAllRequest(pageRequest, service);
         assertEquals(ResponseEntity.ok(mockedPage), response);
 
@@ -105,15 +105,15 @@ class CompanyEventControllerTest extends BaseTestClass  {
     }
 
     @Test
-    void findByCompanyId () throws Exception {
+    void findByCompanyId() throws Exception {
         List<CompanyEventDto> expectedDto = Arrays.asList(mockEvent1(), mockEvent2());
 
-        given(service.findByCompanyId (any(UUID.class))).willReturn(expectedDto);
+        given(service.findByCompanyId(any(UUID.class))).willReturn(expectedDto);
 
         String url = "/lnf/company/" + companyId + "/event";
 
         String resultContent = new String(Files
-                .readAllBytes(Paths.get(ClassLoader.getSystemResource("testdata/company-events.json")
+                .readAllBytes(Path.of(ClassLoader.getSystemResource("testdata/company-events.json")
                         .toURI())));
 
         mockMvc.perform(get(url)
@@ -121,15 +121,15 @@ class CompanyEventControllerTest extends BaseTestClass  {
                 .andExpect(status().isOk())
                 .andExpect(content().json(resultContent));
 
-        verify(service, times(1)).findByCompanyId (any(UUID.class));
+        verify(service, times(1)).findByCompanyId(any(UUID.class));
 
     }
 
     @Test
-    void findByCompanyIdAndId () throws Exception {
+    void findByCompanyIdAndId() throws Exception {
         UUID id = UUID.fromString("cfe94b9f-c86f-4733-be96-a9b619f7bca7");
 
-        CompanyEventDto expectedDto = mockEvent1 ();
+        CompanyEventDto expectedDto = mockEvent1();
 
         given(service.findById(any(UUID.class), any(UUID.class))).willReturn(expectedDto);
 
@@ -143,41 +143,41 @@ class CompanyEventControllerTest extends BaseTestClass  {
     @Test
     void createCompanyEvents() {
         // Arrange
-        List<CompanyEventDto> mockEvent = List.of (mockEvent1(), mockEvent2 ());
-        doNothing ().when (service).create (companyId, mockEvent);
+        List<CompanyEventDto> mockEvent = List.of(mockEvent1(), mockEvent2());
+        doNothing().when(service).create(companyId, mockEvent);
         String url = "/lnf/company/" + companyId + "/events";
 
         @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<CompanyEventDto>> captor = ArgumentCaptor.forClass (List.class);
+        ArgumentCaptor<List<CompanyEventDto>> captor = ArgumentCaptor.forClass(List.class);
 
         // Act
         try {
-            mockMvc.perform (post (url)
-                            .contentType (APPLICATION_JSON)
-                            .content (asJsonString (mockEvent)))
-                    .andExpect (status ().isCreated ());
+            mockMvc.perform(post(url)
+                            .contentType(APPLICATION_JSON)
+                            .content(asJsonString(mockEvent)))
+                    .andExpect(status().isCreated());
         } catch (Exception e) {
-            fail ("Unexpected exception: " + e.getMessage ());
+            fail("Unexpected exception: " + e.getMessage());
         }
 
         // Assert
-        verify (service).create (eq (companyId), captor.capture ());
-        List<CompanyEventDto> actualEvents = captor.getValue ();
+        verify(service).create(eq(companyId), captor.capture());
+        List<CompanyEventDto> actualEvents = captor.getValue();
 
         // Check if the lists have the same size
-        assertEquals (actualEvents.size (), actualEvents.size (), "The number of events created should match");
+        assertEquals(actualEvents.size(), actualEvents.size(), "The number of events created should match");
 
         // Check if the details of each event match
-        for (int i = 0; i < actualEvents.size (); i++) {
-            assertEquals (actualEvents.get (i).getEventDescription (), actualEvents.get (i).getEventDescription (),
+        for (int i = 0; i < actualEvents.size(); i++) {
+            assertEquals(actualEvents.get(i).getEventDescription(), actualEvents.get(i).getEventDescription(),
                     "EventDescription should match for company at index " + i);
-            assertEquals (actualEvents.get (i).getEventType (), actualEvents.get (i).getEventType (),
+            assertEquals(actualEvents.get(i).getEventType(), actualEvents.get(i).getEventType(),
                     "EventType should match for company at index " + i);
-            assertEquals (actualEvents.get (i).getStatus (), actualEvents.get (i).getStatus (),
+            assertEquals(actualEvents.get(i).getStatus(), actualEvents.get(i).getStatus(),
                     "Status should match for company at index " + i);
-            assertEquals (actualEvents.get (i).getAssignTo (), actualEvents.get (i).getAssignTo (),
+            assertEquals(actualEvents.get(i).getAssignTo(), actualEvents.get(i).getAssignTo(),
                     "AssignCode should match for company at index " + i);
-            assertEquals (actualEvents.get (i).getDateAndTime (), actualEvents.get (i).getDateAndTime (),
+            assertEquals(actualEvents.get(i).getDateAndTime(), actualEvents.get(i).getDateAndTime(),
                     "DateAndTime should match for company at index " + i);
         }
     }
@@ -204,7 +204,7 @@ class CompanyEventControllerTest extends BaseTestClass  {
     @Test
     void updateCompanyEvent() {
         // Arrange
-        UUID eventId = UUID.fromString ("019d9f96-8f91-4725-9056-ed022b4cb65f");
+        UUID eventId = UUID.fromString("019d9f96-8f91-4725-9056-ed022b4cb65f");
         CompanyEventDto updatedEvent = mockEvent2();
         updatedEvent.setId(eventId);
 
@@ -227,11 +227,11 @@ class CompanyEventControllerTest extends BaseTestClass  {
         CompanyEventDto actualEvent = captor.getValue();
 
         assertEquals(updatedEvent.getId(), actualEvent.getId(), "Event IDs should match");
-        assertEquals(updatedEvent.getDateAndTime (), actualEvent.getDateAndTime (), "Event DateAndTime should match");
-        assertEquals(updatedEvent.getEventDescription (), actualEvent.getEventDescription (), "Event EventDescription should match");
-        assertEquals(updatedEvent.getAssignTo (), actualEvent.getAssignTo (), "Event AssignTo should match");
-        assertEquals(updatedEvent.getStatus (), actualEvent.getStatus (), "Event Status should match");
-        assertEquals(updatedEvent.getEventType (), actualEvent.getEventType (), "Event EventType should match");
+        assertEquals(updatedEvent.getDateAndTime(), actualEvent.getDateAndTime(), "Event DateAndTime should match");
+        assertEquals(updatedEvent.getEventDescription(), actualEvent.getEventDescription(), "Event EventDescription should match");
+        assertEquals(updatedEvent.getAssignTo(), actualEvent.getAssignTo(), "Event AssignTo should match");
+        assertEquals(updatedEvent.getStatus(), actualEvent.getStatus(), "Event Status should match");
+        assertEquals(updatedEvent.getEventType(), actualEvent.getEventType(), "Event EventType should match");
 
     }
 
@@ -244,13 +244,13 @@ class CompanyEventControllerTest extends BaseTestClass  {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNoContent());
 
-        verify(service).deleteByCompanyId (companyId);
+        verify(service).deleteByCompanyId(companyId);
     }
 
     @Test
     void deleteByCompanyIdAndId() throws Exception {
         UUID id = UUID.randomUUID();
-        String urlTemplate = String.format("/lnf/company/%s/event/%s", companyId, id);
+        String urlTemplate = "/lnf/company/%s/event/%s".formatted(companyId, id);
 
         mockMvc.perform(delete(urlTemplate)
                         .contentType(MediaType.APPLICATION_JSON))
@@ -260,17 +260,17 @@ class CompanyEventControllerTest extends BaseTestClass  {
     }
 
     private CompanyEventDto mockEvent1() {
-        return  createEvent("cfe94b9f-c86f-4733-be96-a9b619f7bca7", "Birthday", "2024-04-30", "Vikranth Thakur",
+        return createEvent("cfe94b9f-c86f-4733-be96-a9b619f7bca7", "Birthday", "2024-04-30", "Vikranth Thakur",
                 "31st birthday", "InProgress");
     }
 
     private CompanyEventDto mockEvent2() {
-        return  createEvent("019d9f96-8f91-4725-9056-ed022b4cb65f", "Release", "2024-04-02", "Pritham k Shende",
+        return createEvent("019d9f96-8f91-4725-9056-ed022b4cb65f", "Release", "2024-04-02", "Pritham k Shende",
                 "Product is Launching", "Release");
     }
 
-    private CompanyEventDto createEvent(String id, String eventType,String dateAndTime, String assignTo, String eventDescription, String status) {
-        CompanyEventDto dto = new CompanyEventDto ();
+    private CompanyEventDto createEvent(String id, String eventType, String dateAndTime, String assignTo, String eventDescription, String status) {
+        CompanyEventDto dto = new CompanyEventDto();
         dto.setId(UUID.fromString(id));
         dto.setEventType(eventType);
         dto.setDateAndTime(LocalDate.parse((dateAndTime)));
@@ -287,18 +287,18 @@ class CompanyEventControllerTest extends BaseTestClass  {
                 .andExpect(statusMatcher)
                 .andExpect(content().string(containsString(containsString))) // Validate the ID
                 .andExpect(jsonPath("$.id").value(containsString)) // Additional, more specific validation
-                .andExpect(jsonPath("$.eventType").value(expectedDto.getEventType ()))
-                .andExpect(jsonPath("$.dateAndTime").value(expectedDto.getDateAndTime ().toString ()))
-                .andExpect(jsonPath("$.assignTo").value(expectedDto.getAssignTo ()))
+                .andExpect(jsonPath("$.eventType").value(expectedDto.getEventType()))
+                .andExpect(jsonPath("$.dateAndTime").value(expectedDto.getDateAndTime().toString()))
+                .andExpect(jsonPath("$.assignTo").value(expectedDto.getAssignTo()))
                 .andExpect(jsonPath("$.eventDescription").value(expectedDto.getEventDescription()))
-                .andExpect(jsonPath("$.status").value(expectedDto.getStatus ()));
+                .andExpect(jsonPath("$.status").value(expectedDto.getStatus()));
 
     }
 
     private static String asJsonString(final Object obj) {
         try {
-            return new ObjectMapper ()
-                    .registerModule(new JavaTimeModule ())
+            return new ObjectMapper()
+                    .registerModule(new JavaTimeModule())
                     .writeValueAsString(obj);
         } catch (Exception e) {
             throw new RuntimeException(e);
